переделал сразу на лист